<resources>
    <string name="app_name">RegistrationKot</string>
    <string name="user_registration">User Registration</string>
    <string name="assign_course">Assign Course</string>
    <string name="assign_class">Assign Class</string>
    <string name="registration">Registration</string>

    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="assign">Assign</string>
    <string name="course">Course</string>
    <string name="str_class">Class</string>
    <string name="save">Save</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>

    <string name="logout">Logout</string>
</resources>
