<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <androidx.cardview.widget.CardView
       android:layout_marginTop="5dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:id="@+id/li_user_item_list"
           android:padding="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:id="@+id/username_info"
               android:text="@string/name"/>
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:id="@+id/phone_no_into"
               android:text="@string/phone"/>
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:id="@+id/email_info"
               android:text="@string/email"/>
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginLeft="5dp"
               android:id="@+id/address_info"
               android:text="@string/address"/>
       </LinearLayout>
   </androidx.cardview.widget.CardView>
</LinearLayout>