<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:background="@color/colorLight"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:textColor="@color/color_white"
                       android:padding="10dp"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:textStyle="bold"
                       android:text="@string/teacher"
                       android:textAlignment="center"/>
                   <TextView
                       android:textColor="@color/color_white"
                       android:padding="10dp"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:textStyle="bold"
                       android:text="@string/str_class"
                       android:textAlignment="center"/>
                   <TextView
                       android:textColor="@color/color_white"
                       android:padding="10dp"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:textStyle="bold"
                       android:text="@string/course"
                       android:textAlignment="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/assign_course_recycler"/>

    </LinearLayout>

    <include layout="@layout/content_floating_btn" />

</RelativeLayout>