<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_regular"
                    android:textColor="@color/colorBlack"
                    android:text="@string/name"/>

                <EditText
                    android:background="@drawable/shape"
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:id="@+id/edt_userName" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/phone"/>

                <EditText
                    android:background="@drawable/shape"
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="phone"
                    android:maxLength="50"
                    android:id="@+id/edt_phone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/email"/>

                <EditText
                    android:background="@drawable/shape"
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLength="256"
                    android:inputType="textEmailAddress"
                    android:id="@+id/edt_email"/>
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/address"/>

                <EditText
                    android:background="@drawable/shape"
                    android:layout_marginTop="4dp"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="textPersonName"
                    android:id="@+id/edt_address"/>
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_user"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:text="@string/save"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
