<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:id="@+id/rdo_group">
            <RadioButton
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/rdo_student"
                android:text="Student"/>
            <RadioButton
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/rdo_teacher"
                android:text="Teacher"/>
        </RadioGroup>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:background="@color/colorLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/color_white"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:textAlignment="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"/>
                    <TextView
                        android:textColor="@color/color_white"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:textAlignment="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone"/>
                    <TextView
                        android:textColor="@color/color_white"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:textAlignment="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/email"/>
                    <TextView
                        android:textColor="@color/color_white"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:textAlignment="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/address"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/user_registration_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

        </LinearLayout>



    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_add_black_24dp"/>

</RelativeLayout>