<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_margin="4dp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/teacher"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    app:cardElevation="4dp"
                    android:layout_margin="2dp"
                    android:layout_weight="2">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/teacher_spinner"
                        android:layout_weight="2"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_margin="4dp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/str_class"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    app:cardElevation="4dp"
                    android:layout_margin="2dp"
                    android:layout_weight="2">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/class_spinner"
                        android:layout_weight="2"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/course"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    app:cardElevation="4dp"
                    android:layout_margin="2dp"
                    android:layout_weight="2">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/course_spinner"
                        android:layout_weight="2"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_assign_course"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:text="@string/save"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>