<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/color_white"
                    android:textAlignment="center"
                    android:padding="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_registration"
                    android:id="@+id/tv_registration"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/color_white"
                    android:textAlignment="center"
                    android:padding="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assign_course"
                    android:id="@+id/tv_assignCourse"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/color_white"
                    android:textAlignment="center"
                    android:padding="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assign_class"
                    android:id="@+id/tv_assignClass"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>