<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="257dp"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/str_class"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="243dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:src="@drawable/ic_class"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimary"
        app:pressedTranslationZ="12dp" />

    <TextView
        android:id="@+id/tv_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="184dp"
        android:padding="5dp"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:background="@color/colorPrimary"
        android:text="@string/course"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="175dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:src="@drawable/ic_course"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimary"
        app:pressedTranslationZ="12dp" />

    <TextView
        android:id="@+id/tv_assign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="78dp"
        android:padding="5dp"
        android:text="@string/assign_course"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:background="@color/colorPrimary"
        android:visibility="invisible"
        android:layout_alignParentRight="true"
        android:layout_marginRight="88dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_assign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="106dp"
        android:layout_marginEnd="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimary"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/ic_online_course"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_assign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="33dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:src="@drawable/ic_add_black_24dp"
        android:visibility="visible"
        app:backgroundTint="@color/colorPrimary"
        app:pressedTranslationZ="12dp" />

</RelativeLayout>